# meu-radar-financeiro-processor

./: .dockerignore  .env  .env.example  Dockerfile  README.md  main.py  pyproject.toml
app/: main.py
app/api/: routes.py
app/config/: settings.py
app/domain/: document_sanitizer copy.py  document_sanitizer.py  document_service.py  invoice_extract_service.py
app/infra/: scheduler.py  supabase_client.py
