[project]
name = "meu-radar-financeiro-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "docling>=2.30,<2.60",
    "fastapi>=0.128.0",
    "numpy<2",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "supabase>=2.27.2",
    "torch==2.2.2",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.20",
]
